--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.1.2"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "pug": "^3.0.2"
